# task-killer

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
src/: altmain.cpp  main.cpp
